Done some CSS positioning

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <name>Danny Hart</name>
+        <title>Danny Hart</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="favicon.ico"/>
     </head>
 
+    <body>
+        <div class="topContainer">
+            <img class="top-cloud" src="images/cloud.png" alt="cloud-img"/>
+            <h1>I'm Danny.</h1>
+            <p>a <span class="pro">pro</span>grammer.</p>
+            <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img"/>
+            <img class="mountain" src="images/mountain.png" alt="mountain-img"/>
+        </div>
+        <div class="middleContainer">
+            <h1>Middle container</h1>
+        </div>
+        <div class="bottomContainer">
+            <h1>Bottom container</h1>
+        </div>
+    </body>
 </html>
