--- a/index.html
+++ b/index.html
@@ -5,21 +5,53 @@
         <title>Danny Hart</title>
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="favicon.ico"/>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet"/>
     </head>
 
     <body>
         <div class="topContainer">
             <img class="top-cloud" src="images/cloud.png" alt="cloud-img"/>
             <h1>I'm Danny.</h1>
-            <p>a <span class="pro">pro</span>grammer.</p>
+            <h2>a <span class="pro">pro</span>grammer.</h2>
             <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img"/>
             <img class="mountain" src="images/mountain.png" alt="mountain-img"/>
         </div>
-        <div class="middleContainer">
-            <h1>Middle container</h1>
+        <div class="middle-container">
+            <div class="profile">
+                <img src="images/chillies.png" alt="">
+                <h2>Hello.</h2>
+                <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+            </div>
+            <hr>
+            <div class="skills">
+                <h2>My Skills.</h2>
+                <div class="skill-row">
+                    <img class="skill-image" src="images/computer.png" alt="">
+                    <h3>Lorem & Ipsum</h3>
+                    <p class="code-skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                </div>
+                <div class="skill-row">
+                    <img class="skill-image" src="images/computer.png" alt="">
+                    <h3>Lorem Ipsum Dolor</h3>
+                    <p class="code-skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="contact-me">
+                <h2>Get In Touch</h2>
+                <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+                <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+                <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            </div>
         </div>
-        <div class="bottomContainer">
-            <h1>Bottom container</h1>
+
+
+        <div class="bottom-container">
+            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.google.com/">Website</a>
+            <p>© 2018 Danny Hart.</p>
         </div>
+
     </body>
 </html>
